Java 1.8 Rewrite